--- a/brand_teacher/index.html
+++ b/brand_teacher/index.html
@@ -10,25 +10,27 @@
     <script src="./js/cube.js"></script>
 </head>
 <body>
-    <header class="header container">
-        <nav class="header__nav row">
-            <ul class="header__list col-xl-8 offset-xl-2">
-                <li class="header__item nav-item">Компетенции</li>
-                <li class="header__item nav-item">Выступления</li>
-                <li class="header__item nav-item">Блог</li>
-                <li class="header__item nav-item">Отзывы</li>
-                <li class="header__item nav-item">Контакты</li>
-            </ul>
-        </nav>
+    <header class="header">
+        <section class="container">
+            <nav class="header__nav row">
+                <ul class="header__list col-lg-8 offset-lg-2">
+                    <li class="header__item nav-item">Компетенции</li>
+                    <li class="header__item nav-item">Выступления</li>
+                    <li class="header__item nav-item">Блог</li>
+                    <li class="header__item nav-item">Отзывы</li>
+                    <li class="header__item nav-item">Контакты</li>
+                </ul>
+            </nav>
+        </section>
     </header>
-    <main class="main" style="background: #766d6d; position: relative; top: 100vh;">
+    <main class="main">
         <section class="section">
             <div class="container">
                 <div class="intro row">
-                    <div class="col-xl-6 intro__image--block">
+                    <div class="col-lg-6 intro__image--block">
                         <div class="intro__image"></div>
                     </div>
-                    <div class="col-xl-5 offset-xl-1 intro__biography--block">
+                    <div class="col-lg-5 offset-lg-1 intro__biography--block">
                         <h1 class="intro__title"><span>кадеева</span><br>зульфия каюмовна</h1>
                         <p class="intro__biography--text">Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты. Предупреждал ему ты повстречался запятой наш злых большой пояс заглавных!</p>
                         <div class="intro__arrow">
@@ -38,31 +40,54 @@
                         </div>
                     </div>
                 </div>
-                <!-- cube -->
-                <section class="cube">
-                    <article class="back">
-                        <p>я</p>
-                    </article>
-                    <article class="top">
-                        <p>могу</p>
-                    </article>
-                    <article class="front">
-                        <p>написать</p>
-                    </article>
-                    <article class="bottom">
-                        <p>здесь</p>
-                    </article>
-                    <article class="left">
-                        <p>любой</p>
-                    </article>
-                    <article class="right">
-                        <p>текст</p>
-                    </article>
-                </section>
             </div>
         </section>
-        <section class="container">Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Инициал жаренные рекламных вершину ее меня языком. Рыбного что ведущими вскоре толку. Свою буквоград оксмокс мир злых составитель алфавит не вершину коварный имеет снова, послушавшись первую рыбными агентство! Которое прямо предупредила, толку по всей языкового ipsum! Большой повстречался это строчка свой снова, коварный диких образ о точках реторический бросил рыбного которое рукописи сбить пунктуация текстов. Вскоре, диких своего вдали но которой заманивший щеке рот рукопись решила переулка эта дороге ее великий своих текстов жизни буквоград переписывается выйти, несколько проектах даже знаках. Прямо всеми вопрос lorem, путь первую домах текстами которое океана правилами строчка. Составитель, страну даже над, грустный собрал агентство свой парадигматическая страна подзаголовок но, пояс выйти коварный вершину власти заголовок толку своего заманивший путь его мир все языкового. Большой большого последний, вопрос дороге вопроса вдали мир маленький инициал толку океана прямо от всех осталось имеет, выйти ему себя заглавных рукопись рыбными рекламных скатился меня? Свою, толку знаках однажды предупреждал, которой страну решила, языком до пустился за вдали переулка ведущими языкового парадигматическая вопроса снова он? Семь оксмокс, большой ее напоивший всемогущая от всех единственное путь лучше журчит меня вдали своих мир ручеек языком за рыбными не назад о текст пунктуация, силуэт семантика! Прямо моей послушавшись, подпоясал диких за переулка возвращайся продолжил вскоре по всей проектах не наш злых заглавных реторический сбить ручеек одна инициал он что дал собрал безопасную, залетают на берегу там. Коварных предложения силуэт мир, пор бросил повстречался страну вскоре языкового что всеми имеет собрал текстами назад курсивных, это инициал свой переписали букв использовало маленькая переписывается они подзаголовок! Агентство буквенных если приставка имеет пустился рукопись назад рыбными эта собрал, использовало семантика все от всех грамматики меня, запятых заманивший жизни раз великий, он наш мир. Страну, меня предложения! То вдали безорфографичный текста если свой толку переписали, заманивший все прямо по всей рекламных за пояс, подпоясал которое взгляд инициал рыбного наш щеке до! Назад подзаголовок бросил страну семантика свое образ большой страна, лучше парадигматическая сих рекламных то ты семь своих свою родного заманивший. Всеми там использовало мир, текст живет это толку букв. Меня дал большого рукописи запятой приставка. Семь большого силуэт лучше семантика речью журчит пустился, родного за встретил, маленькая дорогу взгляд, подпоясал своих! Маленькая прямо необходимыми образ пунктуация, журчит своих семантика там. Даль себя коварных страна образ переписывается рот, сих там продолжил сбить от всех путь текстов о своего речью домах языкового? Лучше толку проектах правилами предупреждал безопасную он грамматики гор, использовало переулка, осталось встретил! Бросил свое снова свою текстами деревни сбить заманивший, составитель маленький свой, залетают, однажды пунктуация взобравшись выйти его. Коварный точках предупредила образ свое, коварных мир эта наш силуэт журчит своего всемогущая курсивных, предупреждал, заманивший последний lorem сбить вопрос запятых снова семь назад. Там возвращайся всеми живет языкового, напоивший рыбного которой лучше, проектах взгляд рыбными предупреждал семь необходимыми вопрос рекламных, собрал приставка ему? Его пунктуация взобравшись рот она строчка предложения, переписали пояс необходимыми семь ему сбить? На берегу скатился подпоясал парадигматическая продолжил, океана деревни, коварных предупреждал рукописи взгляд семантика имени великий? По всей правилами жаренные последний? Раз о языкового дорогу заголовок, страна грамматики ручеек вопроса рукописи наш они то рекламных прямо себя текст необходимыми рот безорфографичный заглавных гор маленький родного над рукопись лучше скатился города. Рукопись точках рукописи лучше до залетают! Пор там, предупреждал не вдали но послушавшись дал ее страну вопрос до маленький власти гор которое заманивший семантика рот жаренные, свой журчит домах путь решила сбить ты большого. На берегу ipsum большого пояс заглавных своих страна возвращайся от всех? Алфавит дал вопроса несколько по всей своего заголовок коварный но, семантика курсивных там последний текст знаках свою. Рекламных имеет по всей безопасную оксмокс образ? Журчит обеспечивает что запятых алфавит имени языком назад великий не снова, буквенных предупреждал скатился встретил свою за. Ручеек взгляд наш, рукопись строчка толку ее мир грамматики возвращайся запятых образ дорогу это своего, по всей снова. Текста домах однажды о решила, напоивший последний повстречался страна. Силуэт ему, парадигматическая это, возвращайся текстов текстами путь продолжил большой, пояс мир на берегу агентство имени журчит его! Живет свою меня собрал снова использовало дал на берегу языкового имеет свой рот предупреждал единственное буквоград там она запятой себя безопасную, путь, запятых заголовок назад послушавшись силуэт приставка! Которое парадигматическая рекламных lorem языком своих оксмокс точках, запятых необходимыми образ путь гор назад проектах реторический ручеек которой, решила приставка. Взгляд, над послушавшись. Путь взобравшись решила языкового своих пунктуация lorem безорфографичный о своего знаках это грамматики алфавит до, скатился вершину свой речью образ грустный домах, снова рыбного переписывается от всех себя ipsum. Грустный, жаренные рукописи? Она путь себя это все повстречался! Моей речью, родного переулка семантика страну приставка дал наш подпоясал предупредила сбить, однажды вопрос его большого это большой повстречался послушавшись коварный то свой? Семь составитель ручеек правилами мир выйти рекламных, точках маленькая продолжил свой дороге гор текстами рукопись рыбными не, пояс строчка страна встретил, вопроса меня путь напоивший он несколько ведущими власти. Имеет инициал своего ведущими текстами букв сих злых пунктуация грустный, ее точках даже грамматики, коварных гор! Подзаголовок рыбного всемогущая до, пунктуация коварных одна, последний рыбными собрал ты всеми семантика домах ipsum использовало маленькая, подпоясал запятой решила вскоре продолжил даль то о большого проектах приставка обеспечивает. Которое рекламных он приставка собрал. Буквоград, пустился запятой наш но безорфографичный, эта подзаголовок путь снова ручеек курсивных, которой домах заголовок оксмокс вопрос ты выйти возвращайся пор. Страна о оксмокс имени свое путь. Текст имеет силуэт напоивший однажды рот продолжил, возвращайся великий сих текста ipsum, себя своего лучше злых подзаголовок реторический власти дорогу безорфографичный пояс ведущими моей буквоград гор родного правилами. Даль снова жизни лучше залетают повстречался имени домах, живет то все мир скатился. Его ему снова ты предупреждал рыбного, всемогущая не своих однажды рекламных! Рукопись его коварных, рот использовало реторический дорогу ручеек пор несколько домах правилами о заглавных ты единственное текстами родного но большого текст рыбного рекламных щеке знаках? Сбить лучше переулка приставка семь коварных океана толку которой путь подзаголовок заманивший текстов залетают мир безорфографичный свое которое переписали, буквенных, она дорогу города раз, знаках запятой страну. Прямо инициал рот приставка составитель буквоград свое маленькая даль семь если то, он алфавит! Бросил там предупреждал имеет букв моей агентство пунктуация имени. Мир вершину текстов пояс своих собрал себя. Гор предупредила букв взобравшись диких приставка.</section>
-        <section class="container"></section>
+        <section class="about-me">
+            <div class="container">
+                <div class="about-me__block row">
+                    <h2 class="about-me__title col-lg-6 offset-lg-3">
+                        обо мне
+                    </h2>
+                </div>
+                <div class="about-me__items row row-cols-1 row-cols-lg-4 gx-lg-5">
+                    <div class="col">
+                        <div class="about-me__card card">
+                            <div class="about-me__card-body card-body">
+                                <h3 class="about-me__card-title card-title">стаж работы</h3>
+                                <p class="about-me__card-text card-text">07</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="about-me__card card">
+                            <div class="about-me__card-body card-body">
+                                <h3 class="about-me__card-title card-title">стаж работы</h3>
+                                <p class="about-me__card-text card-text">07</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="about-me__card card">
+                            <div class="about-me__card-body card-body">
+                                <h3 class="about-me__card-title card-title">стаж работы</h3>
+                                <p class="about-me__card-text card-text">07</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="about-me__card card">
+                            <div class="about-me__card-body card-body">
+                                <h3 class="about-me__card-title card-title">стаж работы</h3>
+                                <p class="about-me__card-text card-text">07</p>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
+                <div class="about-me__btn">
+                    <a class="btn btn-primary" href="#" role="button">Перейти в Telegram</a>
+                </div>
+            </div>
+        </section>
         <section class="container"></section>
         <section class="container"></section>
     </main>
