--- a/brand_teacher/index.html
+++ b/brand_teacher/index.html
@@ -82,7 +82,7 @@
               <div class="about-me__card card">
                 <div class="about-me__card-body card-body">
                   <h3 class="about-me__card-title card-title">Далеко-далеко, за.</h3>
-                  <p class="about-me__card-text card-text" data-target="417">0</p>
+                  <p class="about-me__card-text card-text" data-target="201">0</p>
                 </div>
               </div>
             </div>
@@ -630,7 +630,7 @@
                   </div>
                 </div>
                 <div class="approval__form">
-                  <input type="checkbox" id="politics" onclick="check()" class="politics">
+                  <input type="checkbox" id="politics" class="politics">
                   <label class="approval">
                     даю согласие на обработку персональных данных в соответсвии с <a target="_blank"
                     href="#" class="link__approval">"Политикой конфиденциальности"</a>.
