--- a/brand_teacher/index.html
+++ b/brand_teacher/index.html
@@ -61,7 +61,7 @@
           <div class="about-me__block row">
             <h2 class="about-me__title col-lg-6 offset-lg-3">обо мне</h2>
           </div>
-          <div class="about-me__list row gx-lg-5">
+          <div class="about-me__list row gx-lg-5" id="counter">
             <div class="col-lg-3 about-me__item" id="first_box_count">
               <div class="about-me__card card">
                 <div class="about-me__card-body card-body">
@@ -365,7 +365,7 @@
       <section class="problems">
         <div class="container">
           <div class="problems__block row">
-            <h2 class="problems__title col-lg-8 offset-lg-2">проблемы, которые я помогу вам решить</h2>
+            <h2 class="problems__title col-lg-8 offset-lg-2"><span>проблемы</span>, которые я помогу вам <span>решить</span></h2>
           </div>
           <ul class="problems__list row g-5">
             <li class="col-lg-6">
