--- a/brand_teacher/index.html
+++ b/brand_teacher/index.html
@@ -733,7 +733,7 @@
                   <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <line x1="10.4999" y1="2.18557e-08" x2="10.4999" y2="19" stroke="#9747FF"/>
                     <line x1="0.499878" y1="9" x2="19.4999" y2="9" stroke="#9747FF"/>
-                  </svg>     itemprop="text"
+                  </svg>     
                 </span>
               </div>
               <p itemprop="text" id='tab-4' class="faq__accordion-text col-lg-10">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Даль, составитель? Путь парадигматическая собрал даже заглавных по всей семантика на берегу коварных, не пояс если буквенных послушавшись рыбными вдали раз ее маленький за взобравшись большого то повстречался! Ручеек инициал над города запятых предупреждал ipsum пунктуация текстов взгляд там, большого рыбными родного.</p>
